--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,3 +1,14 @@
 
+<h1><%= @superteam.name %></h1>
+<h2>Team Motto: <%= @superteam.motto %></h2>
+
+<% @heroes.each do |hero| %> 
+    <h5>Superhero number#</h5>
+    <p>Hero Name: <%= hero.name %></p>
+    <p>Hero Power: <%= hero.power %></p>
+    <p>Hero Biography: <%= hero.bio %></p>
+<% end %>
+
+
 
 
